# CityOfPhiladelphia_databridge-etl-tools

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.fast  README.md  docker-fast-requirements.txt  pyproject.toml  setup.py  test.py
.github/workflows/: test_deploy_ecr.yml  test_pr_build.yml
.travis/: before_install.sh  build_lambda.sh  deploy_ecr.sh  deploy_lambda.sh  get_psycopg2.sh
databridge_etl_tools/: __init__.py  __main__.py  abstract.py  ago.py  carto_.py  cli.py  db2.py  opendata.py  oracle.py  postgres.py  utils.py
databridge_etl_tools/abstract/: __init__.py
databridge_etl_tools/ago/: ago.py  ago_commands.py
databridge_etl_tools/airtable/: airtable.py  airtable_commands.py
databridge_etl_tools/ais_geocoder/: ais_geocoder.py  ais_geocoder_commands.py  ais_request.py
databridge_etl_tools/carto/: carto_.py  carto_commands.py
databridge_etl_tools/client/: abstract.py  carto_client.py  oracle_client.py  postgres_client.py
databridge_etl_tools/db2/: db2.py  db2_commands.py
databridge_etl_tools/knack/: knack.py  knack_commands.py
databridge_etl_tools/opendata/: opendata_commands.py
databridge_etl_tools/oracle/: oracle.py  oracle_commands.py
databridge_etl_tools/postgres/: _cleanup.py  _properties.py  _s3.py  example_column_mapping.txt  postgres.py  postgres_commands.py  postgres_connector.py  (+1 more)
lambda/: function.py  index.py
scripts/: build_lambda.sh  entrypoint.sh  pull-oracle-rpm.sh  run_tests.sh  run_tests_v2.sh
tests/: conftest.py  constants.py  test_ago.py  test_carto.py  test_oracle.py  test_postgres.py
(+5 files in other folders)
