[project]
name = "databridge-etl-tools"
version = "0.2.0"
description = "Command line tools to extract and load SQL data to various endpoints"
authors = [
    {name = "citygeo", email = "maps@phila.ov"},
]
dependencies = [
    "geopetl @ git+https://github.com/CityOfPhiladelphia/geopetl.git@master",
    "setuptools>=67.6.0",
    "arcgis>=2.0.0",
    "boto3>=1.21.15",
    "botocore",
    "certifi",
    "chardet",
    "click",
    "docutils",
    "future",
    "idna",
    "jmespath",
    "mock",
    "petl",
    "pyrestcli",
    "python-dateutil",
    "pyproj<=3.2.1",
    "requests",
    "s3transfer",
    "six",
    "numpy==1.22.0",
    "Shapely==1.8.1.post1",
    "numpy==1.22.0",
    "cx_Oracle>=8.3.0",
    "psycopg2-binary==2.9.3",
    "six",
    "carto",
    "moto",
    "pytest",
    "requests-mock"
    
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# installs our command as a cli runnable script
[project.scripts]
databridge_etl_tools = "databridge_etl_tools.cli:main"
